Made text shadows more blurry and fixed overflow

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -51,6 +51,7 @@ section.odd::after {
 section.odd-left::after {
   left: calc((100% - min(960px, 90vw)) / 2); /* Left edge of .container */
   transform: translateX(0); /* No additional shifting */
+ 
 }
 
 /* Right Triangle - Aligns Exactly with Right Edge of .container */
@@ -116,9 +117,16 @@ p {
 =======================================================
 */
 
+.row {
+    margin-left: 0px;
+    margin-right: 0px;
+
+}
+
 .text-center p {
   text-align: center;
 }
+
 
 .bg-main-color {
   background-color: var(--main-color);
@@ -143,7 +151,7 @@ p {
 
 .card-img {
   border: none;
-  box-shadow: 0 0 7px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 1);
 }
 
 /*
@@ -153,7 +161,7 @@ p {
 */
 
 .navbar {
-  --bs-navbar-padding-y: 0rem;
+  --bs-navbar-padding-y: 1rem;
   background: transparent;
   position: absolute;
   top: 0;
@@ -165,7 +173,7 @@ p {
 .navbar-brand,
 .navbar-nav .nav-link {
   color: #fff !important;
-  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  text-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
   transition: color 0.3s ease, border-top 0.3s ease;
 }
 
@@ -191,7 +199,7 @@ p {
     background-color: rgba(0, 0, 0, 0.2);
     padding: 10px;
     border-radius: 5px;
-    backdrop-filter: blur(3px);
+    backdrop-filter: blur(10px);
   }
 
   .navbar-nav {
@@ -255,7 +263,7 @@ p {
   padding: 0;
   background-color: rgba(0, 0, 0, 0.2); 
   backdrop-filter: blur(3px); 
-  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.5); 
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5); 
   z-index: 1000;
   border-radius: 5px;
   min-width: 150px; 
@@ -345,7 +353,7 @@ p {
   background-color: transparent;
   text-align: center;
   color: #fff;
-  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
 }
 
 .color-overlay h2 {
@@ -353,7 +361,7 @@ p {
   text-align: center;
   font-style: italic;
   color: #fff;
-  text-shadow: 5px 5px 5px rgba(0, 0, 0, 0.75);
+  text-shadow: 0px 0px 20px rgba(0, 0, 0, 1);
 }
 
 
